tests/err_qty/exp_frac_one_div.stderr
error: unexpected end of input, expected integer literal
 --> tests/err_qty/exp_frac_one_div.rs:5:30
  |
5 |     let _err = qty![1.0 m^(1/)];
  |                              ^
